// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components:layout:Header:LinkedLogo:Logo renders proper css for desktop format 1`] = `
<div
  className="sc-bdVaJa kOWcsz"
  format="desktop"
>
  Logo
</div>
`;

exports[`components:layout:Header:LinkedLogo:Logo renders proper css for mobile format 1`] = `
<div
  className="sc-bdVaJa gWnjyY"
  format="mobile"
>
  Logo
</div>
`;

exports[`components:layout:Header:LinkedLogo:Logo renders proper css for tablet format 1`] = `
<div
  className="sc-bdVaJa iKaFrQ"
  format="tablet"
>
  Logo
</div>
`;

exports[`components:layout:Header:LinkedLogo:Logo renders proper css when active prop is passed 1`] = `
<div
  className="sc-bdVaJa gLJhY"
>
  Logo
</div>
`;
